--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 	  --foreground-1: #e4ebeb;
     --foreground-2: #c4cdcd;
     --highlight-color: #a6babb;
-    --neutral-color: #9f9f9f;
+    --neutral-color: #75797a;
     --success-color: #a0c150;
     --warning-color: #c3845f;
     --danger-color: #d14040;
@@ -52,8 +52,8 @@
     --sn-stylekit-input-placeholder-color: var(--foreground-2);
     --sn-stylekit-input-border-color: var(--border-color);
     
-    --sn-stylekit-scrollbar-track-border-color: var(--border-color);
-    --sn-stylekit-scrollbar-thumb-color: var(--border-color);
+    --sn-stylekit-scrollbar-track-border-color: var(--foreground-2);
+    --sn-stylekit-scrollbar-thumb-color: var(--foreground-2);
     
     --sn-desktop-titlebar-bg-color: var(--background-1);
     --sn-desktop-titlebar-border-color: var(--border-color);
