--- a/main.css
+++ b/main.css
@@ -42,8 +42,8 @@
     --sn-stylekit-secondary-foreground-color: var(--foreground-2);
     --sn-stylekit-secondary-border-color: var(--border-color);
     
-    --sn-stylekit-secondary-contrast-background-color: var(--background-1);
-    --sn-stylekit-secondary-contrast-foreground-color: var(--foreground-1);
+    --sn-stylekit-secondary-contrast-background-color: var(--border-color);
+    --sn-stylekit-secondary-contrast-foreground-color: var(--neutral-color);
     --sn-stylekit-secondary-contrast-border-color: var(--border-color);
     
     --sn-stylekit-editor-background-color: var(--background-1);
